--- a/src/Components/Book.css
+++ b/src/Components/Book.css
@@ -39,7 +39,6 @@
     background-color: rgb(3, 94, 68);
 }
 
-
 .logo,
 .footer,
 .routerLink {
@@ -88,7 +87,8 @@ button {
     padding-top: 10px;
 }
 
-.addBookForm {
+.addBookForm,
+.editBookForm {
     box-shadow:
         0pt 2px 5px rgba(84, 85, 83, 0.7),
         0px 0px 8px 5px rgba(124, 148, 124, 0.4) inset;
@@ -97,21 +97,43 @@ button {
     text-align: left;
     padding: 1em;
     margin: 1.8em;
-    height: 55em;
+    height: 60em;
 }
 
-.newBookDetails {
+.newBookDetails,
+.editBookDetails {
     width: 400px;
     clear: both;
 }
 
-.newBookDetails input{
+.newBookDetails input,
+.editBookDetails input{
     border-radius: 5px;
     width: 100%;
     clear: both;
 }
 
-.newBookDetails label{
+.newBookDetails label,
+.editBookDetails label{
     padding-top: 10px;
 }
 
+.editAddHeader {
+    text-align: center; 
+    padding: 18px;
+}
+
+.modal-footer {
+    justify-content: space-between;
+}
+
+.modal-container {
+    position: absolute;
+    top: 77%;
+    left: 83%;
+    transform: translate(-50%, -50%) !important;
+}
+
+.editBookForm {
+    background-color: antiquewhite;
+}
